--- a/src/app/sprint/sprint.component.css
+++ b/src/app/sprint/sprint.component.css
@@ -11,7 +11,9 @@
   background-color: #fff;
   color: #444;
   border-radius: 5px;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-size: 150%;
 }
 
@@ -42,6 +44,10 @@
 .sprint-details {
   border-left-width: 1px;
   font-size: 50%;
+}
+
+.title {
+  margin: 0px 0px 15px;
 }
 
 .add-sprint {
