--- a/src/app/user/user-admin/user-admin.component.css
+++ b/src/app/user/user-admin/user-admin.component.css
@@ -11,7 +11,9 @@
   background-color: #fff;
   color: #444;
   border-radius: 5px;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   font-size: 150%;
 }
 
@@ -34,6 +36,9 @@
 }
 
 /*----------------------------------------*/
+.title {
+  margin: 0px 0px 15px;
+}
 
 table {
   width: 100%;
